Remove animation to solve overflow issue.

--- a/leapro_snow/static/css/style.css
+++ b/leapro_snow/static/css/style.css
@@ -1,11 +1,5 @@
 
 
-
-body {
-    overflow-x:hidden;
-}
-
-
 #coaches .col-lg-3 {
     text-align: center;
 }
